; ModuleID = '/home/carl/AnghaBench/libgit2/tests/refs/extr_revparse.c_test_refs_revparse__linear_history.c'
source_filename = "/home/carl/AnghaBench/libgit2/tests/refs/extr_revparse.c_test_refs_revparse__linear_history.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [2 x i8] c"~\00", align 1
@.str.1 = private unnamed_addr constant [8 x i8] c"foo~bar\00", align 1
@.str.2 = private unnamed_addr constant [11 x i8] c"master~bar\00", align 1
@.str.3 = private unnamed_addr constant [10 x i8] c"master~-1\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"master~0bar\00", align 1
@.str.5 = private unnamed_addr constant [26 x i8] c"this doesn't make sense~2\00", align 1
@.str.6 = private unnamed_addr constant [16 x i8] c"be3563a^{tree}~\00", align 1
@.str.7 = private unnamed_addr constant [22 x i8] c"point_to_blob^{blob}~\00", align 1
@.str.8 = private unnamed_addr constant [9 x i8] c"master~0\00", align 1
@.str.9 = private unnamed_addr constant [41 x i8] c"a65fedf39aefe402d3bb6e24df4d4f5fe4547750\00", align 1
@.str.10 = private unnamed_addr constant [9 x i8] c"master~1\00", align 1
@.str.11 = private unnamed_addr constant [41 x i8] c"be3563ae3f795b2b4353bcce3a527ad0a4f7f644\00", align 1
@.str.12 = private unnamed_addr constant [9 x i8] c"master~2\00", align 1
@.str.13 = private unnamed_addr constant [41 x i8] c"9fd738e8f7967c078dceed8190330fc8648ee56a\00", align 1
@.str.14 = private unnamed_addr constant [11 x i8] c"master~1~1\00", align 1
@.str.15 = private unnamed_addr constant [9 x i8] c"master~~\00", align 1

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @test_refs_revparse__linear_history() #0 {
  %1 = call i32 @assert_invalid_single_spec(i8* getelementptr inbounds ([2 x i8], [2 x i8]* @.str, i64 0, i64 0))
  %2 = call i32 @test_object(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.1, i64 0, i64 0), i8* null)
  %3 = call i32 @assert_invalid_single_spec(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.2, i64 0, i64 0))
  %4 = call i32 @assert_invalid_single_spec(i8* getelementptr inbounds ([10 x i8], [10 x i8]* @.str.3, i64 0, i64 0))
  %5 = call i32 @assert_invalid_single_spec(i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i64 0, i64 0))
  %6 = call i32 @assert_invalid_single_spec(i8* getelementptr inbounds ([26 x i8], [26 x i8]* @.str.5, i64 0, i64 0))
  %7 = call i32 @assert_invalid_single_spec(i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.6, i64 0, i64 0))
  %8 = call i32 @assert_invalid_single_spec(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.7, i64 0, i64 0))
  %9 = call i32 @test_object(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.8, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.9, i64 0, i64 0))
  %10 = call i32 @test_object(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.10, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.11, i64 0, i64 0))
  %11 = call i32 @test_object(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.12, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.13, i64 0, i64 0))
  %12 = call i32 @test_object(i8* getelementptr inbounds ([11 x i8], [11 x i8]* @.str.14, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.13, i64 0, i64 0))
  %13 = call i32 @test_object(i8* getelementptr inbounds ([9 x i8], [9 x i8]* @.str.15, i64 0, i64 0), i8* getelementptr inbounds ([41 x i8], [41 x i8]* @.str.13, i64 0, i64 0))
  ret void
}

declare dso_local i32 @assert_invalid_single_spec(i8*) #1

declare dso_local i32 @test_object(i8*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
